--- a/InvertedPendulum/InvertedPendulum.org
+++ b/InvertedPendulum/InvertedPendulum.org
@@ -497,5 +497,10 @@ InvertedPendulum_clean:
 	find . -maxdepth 1 -iname "InvertedPendulum.o"   | xargs $(XARGS_OPT) rm
 	find . -maxdepth 1 -iname "InvertedPendulum.h"   | xargs $(XARGS_OPT) rm 
 	find . -maxdepth 1 -iname "InvertedPendulum.c"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "DE.c"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "Evaluate_omega.c"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "Evaluate_theta.c"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "InvertedPendulum.py"   | xargs $(XARGS_OPT) rm
+	find . -maxdepth 1 -iname "omega_E.c"   | xargs $(XARGS_OPT) rm
   #+end_src
 
