--- a/klein2012structured_RIA/scirl_ria.bib
+++ b/klein2012structured_RIA/scirl_ria.bib
@@ -1,4 +1,4 @@
-@ARTICLE{Munos:2007,
+@ARTICLE{Muno007,
   AUTHOR =       {Rémi Munos},
   TITLE =        {{Performance bounds in $L_p$ norm for approximate value iteration}},
   JOURNAL =      {SIAM journal on control and optimization},
@@ -8,7 +8,7 @@
   pages =        {541-561}
 }
 
-@BOOK{Puterman:1994,
+@BOOK{Puterma994,
   AUTHOR = {Puterman, Martin  L. },
   PUBLISHER = {Wiley-Interscience},
   TITLE = {Markov Decision Processes: Discrete Stochastic Dynamic Programming},
@@ -31,7 +31,7 @@ pages = {480},
 year = {2010}
 }
 
-@book{Sutton:1998,
+@book{Sutto998,
     author = {Sutton, Richard  S.  and Barto, Andrew  G. },
     howpublished = {Hardcover},
     month = {March},
@@ -41,7 +41,7 @@ year = {2010}
     edition = {3rd}
 }
 
-@book{Bertsekas:1996,
+@book{Bertseka996,
     author = {Bertsekas, Dimitri  P.  and Tsitsiklis, John  N. },
     howpublished = {Hardcover},
     publisher = {{Athena Scientific}},
@@ -49,21 +49,21 @@ year = {2010}
     year = {1996}
 }
 
-@INPROCEEDINGS{Ng:2000,
+@INPROCEEDINGS{N000,
   AUTHOR = {Andrew Y. Ng and Stuart Russell},
   TITLE = {{Algorithms for Inverse Reinforcement Learning}},
   BOOKTITLE = {Proceedings of 17th International Conference on Machine Learning (ICML)},
   YEAR = {2000}
 }
 
-@INPROCEEDINGS{Klein:2011,
+@INPROCEEDINGS{Klei011,
 author = {Edouard Klein and Matthieu Geist and Olivier Pietquin},
 title = {{Batch, Off-policy and Model-free Apprenticeship Learning}},
 year = {2011},
 booktitle = {{Proceedings of the European Workshop on Reinforcement Learning (EWRL)}}
 }
 
-@ARTICLE{Guermeur:2007,
+@ARTICLE{Guermeu007,
   AUTHOR =       {Yann Guermeur},
   TITLE =        {{VC thoery of large margin multi-category classifiers}},
   JOURNAL =      {Journal of Machine Learning Research},
@@ -72,14 +72,14 @@ booktitle = {{Proceedings of the European Workshop on Reinforcement Learning (EW
   pages =        {2551-2594}
 }
 
-@INPROCEEDINGS{Taskar:2005,
+@INPROCEEDINGS{Taska005,
   AUTHOR =       {Ben Taskar and Vassil Chatalbashev and Daphne Koller and Carlos Guestrin},
   TITLE =        {{Learning Structured Prediction Models: a Large Margin Approach}},
   BOOKTITLE =    {Proceedings of 22nd International Conference on Machine Learning (ICML)},
   YEAR =         {2005}
 }
 
-@ARTICLE{Bradtke:1996,
+@ARTICLE{Bradtk996,
   AUTHOR =       {Steven J. Bradtke and Andrew G. Barto},
   TITLE =        {{Linear Least-Squares algorithms for temporal difference learning}},
   JOURNAL =      {Machine Learning},
@@ -89,70 +89,70 @@ booktitle = {{Proceedings of the European Workshop on Reinforcement Learning (EW
   pages =        {33-57}
 }
 
-@inproceedings{Ratliff:2006,
+@inproceedings{Ratlif006,
    author = "Nathan Ratliff and Andrew D. Bagnell and Martin Zinkevich",
    title = {{Maximum Margin Planning}},
    booktitle = "Proceedings of the 23rd International Conference on Machine Learning (ICML)",
    year = "2006",
 }
 
-@inproceedings{Russell:1998,
+@inproceedings{Russel998,
  author = {Russell, Stuart},
  title = {Learning agents for uncertain environments (extended abstract)},
  booktitle = {Proceedings of the 11th annual Conference on Computational Learning Theory (COLT)},
  year = {1998},
 }
 
-@inproceedings{Abbeel:2004,
+@inproceedings{Abbee004,
  author = {Abbeel, Pieter and Ng, Andrew Y.},
  title = {Apprenticeship learning via inverse reinforcement learning},
  booktitle = {Proceedings of the 21st International Conference on Machine learning (ICML)},
  year = {2004},
 }
 
-@inproceedings{syed:2010,
+@inproceedings{sye010,
  title = {{A Reduction from Apprenticeship Learning to Classification}},
  author = {Umar Syed and Robert Schapire},
  booktitle = {Advances in Neural Information Processing Systems 23 (NIPS)},
  year = {2010}
 }
 
-@inproceedings{Syed:2008:lp,
+@inproceedings{Sye00p,
  author = {Syed, Umar and Bowling, Michael and Schapire, Robert E.},
  title = {Apprenticeship learning using linear programming},
  booktitle = {Proceedings of the 25th International Conference on Machine learning (ICML)},
  year = {2008}
 }
 
-@inproceedings{Syed:2008:game,
+@inproceedings{Sye00ame,
  title = {A Game-Theoretic Approach to Apprenticeship Learning},
  author = {Umar Syed and Robert Schapire},
  booktitle = {Advances in Neural Information Processing Systems 20 (NIPS)},
  year = {2008}
 }
 
-@INPROCEEDINGS{Ziebart:2008,
+@INPROCEEDINGS{Ziebar008,
   AUTHOR = {Ziebart, Brian D. and Maas, Andrew and Bagnell, J. Andrew and Dey, Anind K.},
   TITLE = {Maximum entropy inverse reinforcement learning},
   BOOKTITLE = {Proceedings of the 23rd national conference on Artificial intelligence (AAAI)},
   YEAR = {2008}
 }
 
-@inproceedings{Ramachandran:2007,
+@inproceedings{Ramachandra007,
   author = {Ramachandran, Deepak and Amir, Eyal},
   title = {Bayesian inverse reinforcement learning},
   booktitle = {Proceedings of the 20th International Joint Conference on Artifical Intelligence (IJCAI)},
   year = {2007}
 }
 
-@INPROCEEDINGS{Neu:2007,
+@INPROCEEDINGS{Ne007,
   AUTHOR =       {Gergely Neu and Czaba Szepesvari},
   TITLE =        {Apprenticeship learning using inverse reinforcement learning and gradient methods},
   BOOKTITLE =    {Uncertainty in Artificial Intelligence},
   YEAR =         {2007}
 }
 
-@ARTICLE{Neu:2010,
+@ARTICLE{Ne010,
   AUTHOR =       {Gergely Neu and Czaba Szepesvari},
   TITLE =        {{Training Parsers by Inverse Reinforcement Learning}},
   JOURNAL =      {Machine Learning},
@@ -162,21 +162,21 @@ booktitle = {{Proceedings of the European Workshop on Reinforcement Learning (EW
   pages =        {303-337}
 }
 
-@Inproceedings {boularias:2011,
+@Inproceedings {boularia011,
    title = {Relative Entropy Inverse Reinforcement Learning},
    year = {2011},
    booktitle = {JMLR Workshop and Conference Proceedings Volume 15: AISTATS 2011},
    author = {Boularias, Abdeslam and Kober, Jens and Peters, Jan}
 }
 
-@inproceedings{Melo:2010,
+@inproceedings{Mel010,
  author = {Melo, Francisco S. and Lopes, Manuel},
  title = {{Learning from demonstration using MDP induced metrics}},
  booktitle = {Proceedings of the European Conference on Machine Learning (ECML)},
  year = {2010}
 }
 
-@inproceedings{Dvij:2010,
+@inproceedings{Dvi010,
   author    = {Krishnamurthy Dvijotham and
                Emanuel Todorov},
   title     = {{Inverse Optimal Control with Linearly-Solvable MDPs}},
