--- a/Rapport2A/Biblio.bib
+++ b/Rapport2A/Biblio.bib
@@ -2,8 +2,7 @@
 author = {Edouard Klein and Bilal PIOT and Matthieu Geist and Olivier Pietquin},
 title = {{Classification structur\'ee pour l’apprentissage par renforcement inverse}},
 year = {2012},
-booktitle = {{Actes de la Conf\'erence Francophone sur l'Apprentissage Automatique (Cap 2012)}},
-note = {to appear},
+booktitle = {{Actes de la Conf\'erence Francophone sur l'Apprentissage Automatique (CAp 2012)}},
 address = {Nancy, France},
 abstract = {Cette contribution traite du probl\`eme de l’apprentissage par imitation par le biais de l’apprentissage par renforcement inverse (ARI). Dans ce contexte, un expert accomplit une t\^ache qu’un agent artificiel doit essayer de reproduire. L’ARI part du postulat que l’expert optimise avec succ\`es une fonction d’utilit\'e ; le probl\`eme consiste à deviner cette fonction (appel\'ee r\'ecompense) à partir de traces du comportement de l’expert. Les algorithmes d’ARI existants n\'ecessitent une ou plusieurs des conditions suivantes pour fonctionner : trajectoires compl\`etes de la part de l’expert, un mod\`ele g\'en\'eratif pour les estimations de type Monte-Carlo, la connaissance des probabilit\'es de transition, la capacit\'e de r\'esoudre le probl\`eme direct (celui de l’apprentissage par ren- forcement) de mani\`ere r\'ep\'et\'ee ou l’acc\`es à la strategie compl\`ete de l’expert. Notre con- tribution consiste en un nouvel algorithme d’ARI levant l’ensemble de ces contraintes. En utilisant une m\'ethode supervis\'ee dans laquelle nous introduisons implicitement la structure du processus d\'ecisionnel de Markov (PDM) sous-jacent, nous cr\'eons un algorithme bas\'e sur une descente de sous-gradient, poss\'edant une faible complexit\'e tant en \'echantillons que calculatoire et surtout ne n\'ecessitant pas la r\'esolution du probl\`eme direct. }
 }
@@ -24,11 +23,19 @@ abstract = {This paper deals with the Inverse Reinforcement Learning framework, 
 
 
 @inproceedings{klein2012,
-author = {Edouard Klein and Bilal PIOT and Matthieu Geist and Olivier Pietquin},
+author = {Edouard Klein and Bilal Piot and Matthieu Geist and Olivier Pietquin},
 title = {{Structured Classification for Inverse Reinforcement Learning}},
 year = {2012},
 booktitle = {{European Workshop on Reinforcement Learning (EWRL 2012)}},
 address = {Edinburgh (UK)},
+abstract = {TBD}
+}
+@inproceedings{klein20122,
+author = {Edouard Klein and Bilal Piot and Matthieu Geist and Olivier Pietquin},
+title = {{Structured Classification for Inverse Reinforcement Learning}},
+year = {2012},
+booktitle = {{NIPS}},
+address = {Lake Tahoe (USA)},
 abstract = {TBD}
 }
 
