--- a/README.org
+++ b/README.org
@@ -1,37 +1,2 @@
-* Tentatvie de nettoyage (Archéologie numérique).
-
-Quand c'est fait on le push sur GitHub histoire de pas perdre ces modifs.
-
-Le but ensuite est de rajouter à la branche master toutes les ressources, actuellement éparpillées dans plein de branches, qui ont servi dans des papiers publiés.
-
-On commitera et pushera au fur et à mesure où on retrouve ces ressources.
-
-* Targets
-| article | conf | papier | poster | slides | exp    | target     |
-| SCIRL   | NIPS | OK     | inex   | inex   | en dur | SCIRL_NIPS |
-|         |      |        |        |        |        |            |
-* Sur le Highway
-On teste l'aglo de cascading.
-A l'heure actuelle, il n'a été testé avec succès que sur le Highway. Et encore, j'ai bidouillé la régression alors que je n'aurais pas dû.
-La bidouille vient d'être enlevée dans la régression.
-Sur le gridworld, Cascading sur S ne marche pas. mais la classif pure fonctionne. Donc on teste aussi la classif pure sure le highway.
-Avec Cascading_Exp1 et ANIRL_Exp6 on s'aperçoit que :
-- Dans le cas des features naturelles, la régression apporte quelque chose, et la classif pure n'est pas une approche qui fonctionne
-- En informé ça marche aussi, mais la classif seule marche également. D'ailleurs la classif seule fonctionne mieux qu'ANIRL
-- SCIRL fonctionne très bien. C'est la meilleure approche en features naturelles, arrive à parité en naturel avec le cascading informé
-- ANIRL parfait ne donne pas un résultat parfait :-p
-
-Cascading_Exp5 montre que le Cascading SxA fonctionne mieux que sur S.
-Il manque juste un point de comparaison.
-
-Immédiatement, l'on va faire tourner ANIRL en mode parfait (même si ça prend des heures) pour avoir quelque chose à afficher.
-Dans un futur plus lointain, l'on va implémenter par exemlpe boularias pour avoir un point de comparaison.
-* Sur le GridWorld
-La baseline, ANIRL_Exp3, fonctionne vraiment pas trop mal.
-Cascading_Exp2 devrait permettre de voir que le cascading ne fonctionne pas avec une régression sur S seule. Par contre la classif seule semble marcher.
-Cela correspond au cas foireux que Matthieu a identifé.
-Après le test de diverses heuristiques sur le GridWorld, il s'avère que que seules certaines marchent bien.
-En fait il n'y en a qu'une qui fonctionne (la 4 : r_min-epsilon) et est justifiable et facilement implémentable.
-
-* Sur le pendule
-Sur le pendule, le cascading ne fonctionne pas car les features ne permettent pas au classifieur de classifier
+* Réécriture du cascading
+  Dans le dossier piot2012cascading, le fichier outline.org contient le plan, qu'il faut que je soumette sous peu à M&O.
